# Gods-Eye

./: .gitignore  README.md  pyproject.toml
godseye/: banner.py  cli.py
godseye.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
